2.22.0-dev
-------------------
* 75810024 remove survey

2.21.0
-------------------
* Small fix to court page (icon misplaced)

2.20.0
-------------------
* Tracking js for server vs client time

2.19.0
-------------------
* 74777202 - As a user I need to have an obvious route to google maps so that google maps opens in a new tab with the court location, or forces it to open in an app

2.18.0
-------------------
* 74773778 - Include disabled access information for every court // Restored to section Building Facilities

2.17.0
-------------------
* 74385570 - As a resident from Northern Ireland, I need to know that CF is not applicable to me.
* 74773778 - Include disabled access information for every court.

2.16.0
-------------------
* 74121946 - As a user I do not want to see irrelevant information on the court page

2.15.0
-------------------
* 72595456 - Search by post code and Divorce returns insufficient results
* 73616878 - DX number relocation

2.14.0
-------------------
* 71921908 - When searched for a court for money claims or reposessions, the user can see a helpful text below search results

2.13.0
-------------------
* 72263802 - Survey design has been changed and now pops up on all pages after 14 seconds

2.12.0
-------------------
* 72727734 - Remove MCOL and PCOL paragraphs
* 72329292 - 'View Details' link added to court search results
* 70036012 - Added related links to court pages
* 72263802 - Survey design has been changed and now pops up on all pages after 14 seconds

2.11.0
-------------------
* 70929866 - Landing page for each aread of law
* Moved to poltergeist for jenkins build support
* 71943052 - Court page "Location of the building" section moved up to below "Phone" section

2.10.2
-------------------
* court council link area of law is being used to link for area of law incorrectly

2.10.1
-------------------
* 71851546 - Exception when resolver cannot get name
* Removed split testing

2.10.0
-------------------