@@ -5,7 +5,6 @@ describe AreasOfLawController do
   let!(:area){ create(:area_of_law)}
 
   before :each do
-    controller.should_receive(:enable_varnish).twice
     controller.should_receive(:set_vary_accept).twice
   end
 
