@@ -5,7 +5,6 @@ describe RegionsController do
 
   before :each do
     @region = Region.create!(name: 'hobbiton').reload
-    controller.should_receive(:enable_varnish).twice
     controller.should_receive(:set_vary_accept).twice
   end
 
